5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1593_1801.log
== TEST (2019-03-26 11:31:37) 
-- CODE:
NO = input("Escreva o nome do objeto: ") # NDO(Nome do Feitiço)

NRF = int(input("Escreva o numero de repetiçoes do feitiço: ")) # NDF(Numero do Repetiçoes do Feitiço)

frase = "Abra" + ndo

NRFa = frase * nrf # NRFa(Numero de Repetiçoes da Frase)

print(NRFa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    frase = "Abra" + ndo
NameError: name 'ndo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:32:58) 
-- CODE:
NO = input("Escreva o nome do objeto: ") # NDO(Nome do Feitiço)

NRF = int(input("Escreva o numero de repetiçoes do feitiço: ")) # NDF(Numero do Repetiçoes do Feitiço)

frase = "Abra" + NO

NRFa = frase * NRF # NRFa(Numero de Repetiçoes da Frase)

print(NRFa)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:27) 
-- CODE:
NO = input("Escreva o nome do objeto: ") # NDO(Nome do Feitiço)

NRF = int(input("Escreva o numero de repeticoes do feitico: ")) # NDF(Numero do Repetiçoes do Feitiço)

frase = "Abra" + NO

NRFa = frase * NRF # NRFa(Numero de Repetiçoes da Frase)

print(NRFa)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:34:14) 
-- CODE:
NO = input("Escreva o nome do objeto: ") # NDO(Nome do Feitiço)

NRF = int(input("Escreva o numero de repeticoes do feitico: ")) # NDF(Numero do Repetiçoes do Feitiço)

frase = "Abra " + NO

NRFa = frase * NRF # NRFa(Numero de Repetiçoes da Frase)

print(NRFa)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:34:57) 
-- CODE:
NO = input("Escreva o nome do objeto: ") # NDO(Nome do Feitiço)

NRF = int(input("Escreva o numero de repeticoes do feitico: ")) # NDF(Numero do Repetiçoes do Feitiço)

frase = " Abra " + NO

NRFa = frase * NRF # NRFa(Numero de Repetiçoes da Frase)

print(NRFa)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:35:10) 
-- CODE:
NO = input("Escreva o nome do objeto: ") # NDO(Nome do Feitiço)

NRF = int(input("Escreva o numero de repeticoes do feitico: ")) # NDF(Numero do Repetiçoes do Feitiço)

frase = " Abra " + NO

NRFa = frase * NRF # NRFa(Numero de Repetiçoes da Frase)

print(NRFa)
-- EXECUTION TIME:
0.159125
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:33:53) 
-- CODE:
NO = input("Escreva o nome do objeto: ") # NDO(Nome do Feitiço)

NRF = int(input("Escreva o numero de repeticoes do feitico: ")) # NDF(Numero do Repetiçoes do Feitiço)

frase = " Abra " + NO

NRFa = frase * NRF # NRFa(Numero de Repetiçoes da Frase)

print(NRFa)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:34:37) 
-- CODE:
NO = input("Escreva o nome do objeto: ") # NDO(Nome do Feitiço)

NRF = int(input("Escreva o numero de repeticoes do feitico: ")) # NDF(Numero do Repetiçoes do Feitiço)

frase = " Abra " + NO

NRFa = frase * NRF # NRFa(Numero de Repetiçoes da Frase)

print(NRFa)
-- EXECUTION TIME:
0.216812
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
